visibility fix

--- a/src/scss/components/hero.scss
+++ b/src/scss/components/hero.scss
@@ -32,13 +32,20 @@
 		}
 		&-integration {
 			position: absolute;
-			inset: 1px;
+			inset: 0;
 			z-index: 50;
 			border-radius: 25px;
 			padding: 25px;
 			display: flex;
 			flex-direction: column;
 			justify-content: space-between;
+			opacity: 0;
+			visibility: hidden;
+			transition: opacity 0.3s ease, visibility 0.3s ease;
+			&-visible {
+				opacity: 1;
+				visibility: visible;
+			}
 		}
 		&-static {
 			padding: 80px 80px 50px 60px;
